2004-06-27 DJ Lucas <dj@linuxfromscratch.org>
	* Added sysstat bootscript
	* Fixed missing $EXTDIR targets in Makefile

2004-06-16 DJ Lucas <dj@linuxfromscratch.org>
	* Added GPMOPTS to gpm script
	* wrapped all gpm variables in quotes

2004-05-22 Tushar T <tushar@linuxfromscratch.org>
	* Added winbind script.

2004-05-14 Tushar T <tushar@linuxfromscratch.org>
	* Added init.d/kerberos script.
	* Added init.d/usb script.

2004-05-13 Tushar T <tushar@linuxfromscratch.org>
	* The begining of blfs-bootscripts.
