@@ -1,0 +1,37 @@
+#!/bin/sh
+# Begin $rc_base/init.d/svn
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+	start)
+		echo "Starting Subversion..."
+		loadproc /usr/bin/svnserve -d -r /srv/svn/repositories
+		;;
+
+	stop)
+		echo "Stopping Subversion..."
+		killproc svnserve.orig
+		;;
+
+	restart)
+		$0 stop
+		sleep 1
+		$0 start
+		;;
+
+	status)
+		statusproc svnserve.orig
+		;;
+
+	*)
+		echo "Usage: $0 {start|stop|restart|status}"
+		exit 1
+		;;
+esac
+
+# End $rc_base/init.d/svn
