@@ -1,0 +1,42 @@
+#!/bin/sh
+# Begin $rc_base/init.d/vsftpd
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+	start)
+		echo "Starting vsFTPD Server..."
+		exec /usr/sbin/vsftpd &
+		;;
+
+	stop)
+		echo "Stopping vsFTPD Server..."
+		killproc /usr/sbin/vsftpd
+		;;
+
+	reload)
+		echo "Reloading vsFTPD Server..."
+		reloadproc /usr/sbin/vsftpd
+		;;
+
+	restart)
+		$0 stop
+		sleep 1
+		$0 start
+		;;
+
+	status)
+		statusproc /usr/sbin/sshd
+		;;
+
+	*)
+		echo "Usage: $0 {start|stop|reload|restart|status}"
+		exit 1
+		;;
+esac
+
+# End $rc_base/init.d/vsftpd
